[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/ui/textbox/Portrait9Patch.png" type="Texture" id=1]
[ext_resource path="res://fonts/JonLandCompressed.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/ui/textbox/GreenGhostPortrait.png" type="Texture" id=3]
[ext_resource path="res://sprites/ui/textbox/BW9Patch.png" type="Texture" id=4]
[ext_resource path="res://src/ui/question_box/QuestionBox.gd" type="Script" id=5]
[ext_resource path="res://src/ui/question_box/states/QuestionBoxStateReady.gd" type="Script" id=6]
[ext_resource path="res://src/ui/question_box/states/QuestionBoxStateQuestionText.gd" type="Script" id=7]
[ext_resource path="res://sprites/ui/textbox/DownTicker.png" type="Texture" id=8]
[ext_resource path="res://src/ui/question_box/states/QuestionBoxStateFinished.gd" type="Script" id=9]
[ext_resource path="res://src/ui/question_box/states/QuestionBoxStateSelection.gd" type="Script" id=10]
[ext_resource path="res://src/ui/question_box/states/QuestionBoxStateResponseText.gd" type="Script" id=11]
[ext_resource path="res://sprites/screens/player_computer/FaceIcon.png" type="Texture" id=12]
[ext_resource path="res://src/ui/question_box/states/QuestionBoxStateInitialText.gd" type="Script" id=13]

[node name="QuestionBox" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="TextBox" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatch" type="NinePatchRect" parent="TextBox"]
margin_left = 8.0
margin_top = 8.0
margin_right = 272.0
margin_bottom = 64.0
texture = ExtResource( 4 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Margin" type="MarginContainer" parent="TextBox"]
margin_left = 8.0
margin_top = 8.0
margin_right = 272.0
margin_bottom = 64.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 4

[node name="HBox" type="HBoxContainer" parent="TextBox/Margin"]
margin_left = 6.0
margin_top = 6.0
margin_right = 258.0
margin_bottom = 52.0
custom_constants/separation = 8

[node name="Patch" type="NinePatchRect" parent="TextBox/Margin/HBox"]
visible = false
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 46, 46 )
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Center" type="CenterContainer" parent="TextBox/Margin/HBox/Patch"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="TextBox/Margin/HBox/Patch/Center"]
margin_left = 7.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 37.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="TextBox/Margin/HBox"]
margin_right = 252.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="TextBox/Margin/HBox/HBox"]
margin_right = 241.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="Speaker" type="Label" parent="TextBox/Margin/HBox/HBox/VBox"]
margin_right = 241.0
margin_bottom = 9.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.823529, 0.45098, 1 )
text = "Ligma:"
valign = 1
autowrap = true

[node name="VBox" type="VBoxContainer" parent="TextBox/Margin/HBox/HBox/VBox"]
margin_top = 13.0
margin_right = 241.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 3

[node name="Body" type="Label" parent="TextBox/Margin/HBox/HBox/VBox/VBox"]
margin_right = 241.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "I don't fully understand!"
autowrap = true

[node name="Options" type="HBoxContainer" parent="TextBox/Margin/HBox/HBox/VBox/VBox"]
margin_top = 24.0
margin_right = 241.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="LeftBuffer" type="Control" parent="TextBox/Margin/HBox/HBox/VBox/VBox/Options"]
margin_right = 73.0
margin_bottom = 9.0
size_flags_horizontal = 3

[node name="OptionOne" type="HBoxContainer" parent="TextBox/Margin/HBox/HBox/VBox/VBox/Options"]
margin_left = 77.0
margin_right = 112.0
margin_bottom = 9.0

[node name="SelectionContainer" type="CenterContainer" parent="TextBox/Margin/HBox/HBox/VBox/VBox/Options/OptionOne"]
margin_right = 9.0
margin_bottom = 9.0
rect_min_size = Vector2( 9, 9 )

[node name="SelectionOneTexture" type="TextureRect" parent="TextBox/Margin/HBox/HBox/VBox/VBox/Options/OptionOne/SelectionContainer"]
margin_right = 9.0
margin_bottom = 8.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" type="Label" parent="TextBox/Margin/HBox/HBox/VBox/VBox/Options/OptionOne"]
margin_left = 13.0
margin_right = 35.0
margin_bottom = 9.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Yes"

[node name="MidBuffer" type="Control" parent="TextBox/Margin/HBox/HBox/VBox/VBox/Options"]
margin_left = 116.0
margin_right = 132.0
margin_bottom = 9.0
rect_min_size = Vector2( 16, 0 )

[node name="OptionTwo" type="HBoxContainer" parent="TextBox/Margin/HBox/HBox/VBox/VBox/Options"]
margin_left = 136.0
margin_right = 164.0
margin_bottom = 9.0

[node name="SelectionContainer" type="CenterContainer" parent="TextBox/Margin/HBox/HBox/VBox/VBox/Options/OptionTwo"]
margin_right = 9.0
margin_bottom = 9.0
rect_min_size = Vector2( 9, 9 )

[node name="SelectionTwoTexture" type="TextureRect" parent="TextBox/Margin/HBox/HBox/VBox/VBox/Options/OptionTwo/SelectionContainer"]
margin_right = 9.0
margin_bottom = 8.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" type="Label" parent="TextBox/Margin/HBox/HBox/VBox/VBox/Options/OptionTwo"]
margin_left = 13.0
margin_right = 28.0
margin_bottom = 9.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "No"

[node name="RightBuffer" type="Control" parent="TextBox/Margin/HBox/HBox/VBox/VBox/Options"]
margin_left = 168.0
margin_right = 241.0
margin_bottom = 9.0
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="TextBox/Margin/HBox/HBox"]
margin_left = 245.0
margin_right = 252.0
margin_bottom = 46.0
rect_min_size = Vector2( 7, 46 )
custom_constants/margin_bottom = 2

[node name="Ticker" type="TextureRect" parent="TextBox/Margin/HBox/HBox/Margin"]
margin_top = 39.0
margin_right = 7.0
margin_bottom = 44.0
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="States" type="Node" parent="."]

[node name="Ready" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="InitialText" type="Node" parent="States"]
script = ExtResource( 13 )

[node name="Timer" type="Timer" parent="States/InitialText"]
one_shot = true

[node name="QuestionText" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Selection" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="OptionsTimer" type="Timer" parent="States/Selection"]
wait_time = 0.25
one_shot = true

[node name="ResponseText" type="Node" parent="States"]
script = ExtResource( 11 )

[node name="Finished" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="States/Finished"]
one_shot = true
[connection signal="tween_completed" from="Tween" to="States/QuestionText" method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="Tween" to="States/ResponseText" method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="Tween" to="States/InitialText" method="_on_Tween_tween_completed"]
[connection signal="timeout" from="States/InitialText/Timer" to="States/InitialText" method="_on_Timer_timeout"]
[connection signal="timeout" from="States/Selection/OptionsTimer" to="States/Selection" method="_on_OptionsTimer_timeout"]
[connection signal="timeout" from="States/Finished/Timer" to="States/Finished" method="_on_Timer_timeout"]
